# NereusSDR

./: CHANGELOG.md  CLAUDE.md  CMakeLists.txt  HANDOFF-PLAN4.md  HANDOFF.md  README.md  resources.qrc
docs/: MASTER-PLAN.md
hal-plugin/: CMakeLists.txt  Info.plist  NereusSDRVAX.cpp
scripts/: check-new-ports.py  generate-contributor-indexes.py  insert-thetis-headers.py  install-hooks.sh  verify-thetis-headers.py
src/: main.cpp
tests/: CMakeLists.txt  tst_active_peak_hold.cpp  tst_active_rx_count_live_apply.cpp  tst_add_custom_radio_dialog.cpp  tst_alex1_live_leds.cpp  tst_alex2_live_leds.cpp  tst_alex_filter_map.cpp  tst_anan_multi_meter_item.cpp  tst_antenna_control_tab.cpp  tst_antenna_popup_builder.cpp  tst_antenna_routing_model.cpp  tst_app_settings_migration.cpp  tst_audio_engine_master_mute.cpp  tst_audio_engine_mic_block_ready.cpp  tst_audio_tx_input_mic_gain_mirror.cpp  tst_audio_vax_page_auto_detect.cpp  tst_auto_zoom_fft.cpp  tst_averaging_modes.cpp  tst_b8_overlay_signals.cpp  tst_band_change_recursion_guard.cpp  tst_band_plan_guard.cpp  tst_bar_preset_item.cpp  tst_board_capabilities.cpp  tst_board_capability_flag_wiring.cpp  tst_calibration_tab.cpp  tst_clarity_nf_grid_coexistence.cpp  tst_clock_preset_item.cpp  tst_connection_panel_saved_radios.cpp  tst_connection_panel_state_pills.cpp  tst_connection_state.cpp  tst_container_manager_autoname.cpp  tst_container_persistence.cpp  tst_container_widget_access.cpp  tst_contest_preset_item.cpp  tst_default_model_for_board.cpp  tst_detector_modes.cpp  tst_device_card.cpp  tst_dexp_vox_setup_page.cpp  (+152 more)
(+433 files in other folders)
